# file-organizer

./: LICENSE  Pipfile  README.md  TEST_PLAN.md  categories.py  file_entry.py  organizer.py  organizer_service.py  pyproject.toml  stats.py  utils.py
tests/: test_file_entry.py  test_organizer_main.py  test_organizer_service.py  test_stats.py
